--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,3 +1,8 @@
 {
-  "accentColor": ""
+  "accentColor": "",
+  "theme": "obsidian",
+  "cssTheme": "",
+  "interfaceFontFamily": "Inter",
+  "textFontFamily": "Inter",
+  "translucency": true
 }
